internal/styles/normal.css
/* --- GENERAL --- */

@charset "UTF-8";

* {
	text-rendering: geometricPrecision;
	border: 0 solid;
	margin: 0;
	padding: 0;
}

*,:before,:after {
	box-sizing: border-box;
}

:root {
	color-scheme: light dark; /* enable light-dark() function */
	
	--code-keyword-color: light-dark(#d90642, #f92672);
	--code-comment-color: light-dark(#85816e, #75715e);
	--code-string-color: light-dark(#763b24, #e6db74);
	--code-number-color: light-dark(#1db5c9, #3dd5e9);
	--code-typename-color: light-dark(#0db9a5, #3de9d5);
	--code-function-color: light-dark(#66d9ef, #66d9ef);
	--code-variable-color: light-dark(#ffdf96, #ffdf96);
}

/* --- PAGE SECTIONS --- */

body {
	font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
	
	line-height: 1.5;
	-webkit-tap-highlight-color:transparent;
	
	/* These make sure text isn't arbitrarily resized on small devices such as iOS */
	-webkit-text-size-adjust: 100%;
	-moz-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
	text-size-adjust: 100%;
	
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	
	-moz-tab-size: 4;
	-o-tab-size: 4;
	tab-size: 4;
	
	margin: 0 auto;
	max-width: 43.75rem;
	word-break: break-word;
}

nav { z-index: 1000; }
nav h1 { margin: 0.97rem 0 0.67rem; }

#home_button { text-decoration: none; color: inherit; }

@media (max-width: 768px) {
	main { flex-direction: column; }
}

article {
	text-align: justify;
	hyphens: auto; /* Automatically insert - when wrapping across lines */
}

header, footer {
	padding-top: 1.1rem;
	padding-bottom: 1.1rem;
}

h1,h2,h3,h4,h5,h6 {
	margin-top: 0.5rem;
	margin-bottom: 0.2rem;
}

header {
	font-size: 0.95rem;
}

footer {
	font-size: 0.75rem;
}

p, dl, ol, ul {
	padding-top: 0.2rem;
	padding-bottom: 0.6rem;
	font-size: 1.0rem;
	line-height: 1.5rem;
}

p code, li code {
	line-height: 1;
	padding: 1px 3px;
	font-size: 0.85em;
	
	/* Properties common between code blocks and inline spans */
	border: 1px solid light-dark(#ccc, #333);
	border-radius: 4px;
	color: light-dark(#333, #ccc);
	background-color: light-dark(#f7f7f7, #151515);
}

.code-block {
	margin: 1em 0;
	position: relative;
	
	/* Properties common between code blocks and inline spans */
	border: 1px solid light-dark(#ccc, #333);
	border-radius: 4px;
	color: light-dark(#333, #ccc);
	background-color: light-dark(#f7f7f7, #151515);    
}

.code-block-bar {
	background-color: light-dark(#f2f2f2, #1f1f1f);
	border: solid light-dark(#ccc, #333);
	border-width: 0px 0px 1px;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	width: 100%;
	padding: .3rem 1rem;
	position: relative;
}

/* TODO(ema): Make it change color on hover and click */
.code-block-copy-button {
	margin: auto 0 auto auto;
	padding: .2rem;
	display: flex; /* For when (if) there'll be an icon */
	gap: .5rem;
	justify-content: space-between;
	align-items: center;
	border: 1px solid light-dark(#ccc, #777);
	--button-border-radius: 2px;
	border-radius: var(--button-border-radius);
	-webkit-border-radius: var(--button-border-radius);
	-moz-border-radius: var(--button-border-radius);
	font-size: 0.85rem;
}
.code-block-copy-button:hover {
	background-color: rgba(80,60,50, 0.5);
}
.code-block-copy-button:focus {
	outline: none;
	box-shadow: 0 0 0 3px lightskyblue;
}
.code-block-copy-button:active {
	background-color: light-dark(#000, #fff);
	color: light-dark(#fff, #000);
}

.code-block-content {
	padding: 0.5em 1em;
}

pre, code, samp {
	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
	font-size: 0.9rem;
	line-height: 1.3;
	-moz-tab-size: 4;
	-o-tab-size: 4;
	tab-size: 4;
	word-break: normal;
	word-spacing: normal;
	text-align: left;
	word-wrap: normal;
	overflow-wrap: normal;
	overflow: auto;
	direction: ltr;
	position: relative;
}

/* In order to force <ins> and <del> to highlight the entire line (even when overflowing),
** lay out lines as a grid. We tell the browser we want every sub-element of <code> to
** be the same width, which also means that we need to wrap each line in its own <span>,
** and force that <span> to have display:flex so the grid actually considers its height.
** Then, we have to wrap the *contents* of each line in another <span> so that the line
** only has 1 child element and does not affect the layout of sub-sub-elements.
** Only then, inside this second <span>, we can spam as many <span>s as we want to do
** syntax coloring, and they won't be picked up as separate elements that need to be
** repositioned. I love CSS */
pre code { display: grid; }
code .line { display: flex; }

/* Syntax coloring */
code .keyword  { color: var(--code-keyword-color)  }
code .comment  { color: var(--code-comment-color)  }
code .string   { color: var(--code-string-color)   }
code .number   { color: var(--code-number-color)   }
code .typename { color: var(--code-typename-color) }
code .function { color: var(--code-function-color) }
code .variable { color: var(--code-variable-color) }

/* Insertions, deletions */
code ins, code del { text-decoration: none }
code ins { background-color: light-dark(#dfd, #252) }
code del { background-color: light-dark(#fdd, #522) }

ul,ol { margin: 0; padding: 0 }
ul { list-style: none }
hr { height: 0; color: inherit }

td,legend,textarea,input,fieldset {
	padding: 0
}

figcaption {
	text-align: center;
	font-size: 0.9rem;
}

/* --- FONTS --- */

pre { font-family: inherit; }
b,strong { font-weight: bolder; }
sub { bottom:-.25em; }
sup { top:-.5em; }

small { font-size: 80%; }

sub,sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

/* --- COLORS AND DECORATIONS --- */

body {
	color: light-dark(#333B3C, #D7D8DF);
	background-color: light-dark(#EFEDEA, #1d1f25);
}

header, footer {
	color: light-dark(#4C515F, #4C515F);
}

abbr[title] { text-decoration: underline dotted; }

a {
	color: light-dark(#B09264, #FCD190);
	text-decoration: none;
}
a:visited {
	color: light-dark(#705224, #CCA974);
}
a:hover {
	transition: 150ms ease-in;
	color: light-dark(#4B799B, #71B8EB);
	text-decoration: underline;
}
a,[type=button]:not([disabled]),[role=button],button:not([disabled]) {
	cursor: pointer;
}

/* --- UTILITY CLASSES --- */

.block {display: block}
.inline {display: inline}

.details {
	font-size: 0.875rem;
	color: light-dark(rgb(76, 81, 95), rgb(176, 181, 195));
}

.border { border: 1px solid black; }

/* --- EMBEDS --- */

img,svg,video,canvas,audio,iframe,embed,object{
  display: block;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto
}

button,input,optgroup,select,textarea{
  font-family:inherit;
  font-size:100%;
  margin:0;
  padding:0;
  color:inherit;
  background-color:transparent
}

/* --- OTHER --- */

table{
  text-indent:0;
  border-color:inherit
}

button,select{
  text-transform:none
}

::-moz-focus-inner{
  border-style:none;
  padding:0
}

:-moz-ui-invalid{
  box-shadow:none
}

progress{
  vertical-align:baseline
}

::-webkit-inner-spin-button,::-webkit-outer-spin-button{
  height:auto
}

::-webkit-search-decoration{
  -webkit-appearance:none
}

::-webkit-file-upload-button{
  -webkit-appearance:button;
  font:inherit
}

summary{
  display:list-item
}

.content-gallery {
  display:inline-block;
}

